fixed bugs + added minor changes to docs